# full-stack

auth_api_rust/: .gitignore  Cargo.toml
auth_api_rust/src/: config.rs  errors.rs  handlers.rs  jwt.rs  main.rs  middleware.rs  models.rs
auth_api_rust/src/db/: mem_db.rs  mod.rs
auth_api_rust/static/: index.html
auth_api_rust/static/assets/: index-CUDKgbnM.js
my-auth-app/: .env.production  .gitiignore  openapi.json  package-lock.json  package.json
my-auth-app/src/: App.tsx  main.tsx
my-auth-app/src/components/common/: FormCard.ts  InputContainer.ts  StyledButton.ts  StyledInput.ts
my-auth-app/src/components/layout/: ProtectedRoute.tsx
my-auth-app/src/context/: AuthContext.tsx
my-auth-app/src/hooks/: useSessionTimeout.ts
my-auth-app/src/pages/: Login.tsx  Profile.tsx  Register.tsx
my-auth-app/src/services/: api-types.ts  apiService.ts
my-auth-app/src/styles/: GlobalStyles.ts
