[package]
name = "auth_api_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tower-http = { version = "0.5", features = ["cors", "fs"] }
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
time = "0.3.36"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
async-trait = "0.1.79"

# OpenAPI Documentation - Pinned to known working versions
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }